--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -50,8 +50,9 @@
                     <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
                     <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
                 </p:submenu>
-                <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
-                    <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
+                 <p:submenu label="Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create Warehouse Request" url="createwarehouserequest.xhtml"/>
+                    <p:menuitem value="View All Orders" url="viewallpendingrequests.xhtml"/>
                 </p:submenu>
                 <p:submenu label="Warehouse Service Fulfillment Check" >
                     <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
